# cpp_numeric_cast

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  demo.cpp  has_member.h  numeric_cast.h  proposal_explicit.md  proposal_numeric_cast.md  proposal_safe_get.md  safe_get.h  to_integer.h  to_signed.h
examples/: CMakeLists.txt  demo.cpp  demo.h  demo_boost_safe_numerics.cpp  demo_explicit.cpp  demo_has_member.cpp  demo_mixed_sign.cpp  demo_numeric_cast.cpp  demo_safe_get.cpp
scripts/: build.sh  run_all_tests.sh
tests/: CMakeLists.txt  ftrapv.cpp  test_boost_numeric_cast.cpp  test_numeric_cast.cpp  test_to_integer.cpp  test_to_signed.cpp
